--- a/css/styles.css
+++ b/css/styles.css
@@ -598,6 +598,7 @@ position: relative;
         flex-direction: column;
         max-width: 453px;
         max-height: 80px;
+
         right: 0;
 }
 .mail-text {
@@ -674,4 +675,248 @@ position: relative;
     fill: #fff;
     width: 24px;
     height: 24px;
+}
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    background: rgba(46, 47, 66, 0.4);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.backdrop.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.popup-review {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 72px 24px 24px 24px;
+    transform: translate(-50%, -50%);
+    background-color: #fcfcfc;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    width: 408px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop:not(.is-open) .popup-review {
+    transform: translate(-50%, -50%) scale(1.5);
+}
+
+.close-popup {
+    border-radius: 100%;
+    background-color: #e7e9fc;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    border-width: 1px;
+    border-color: rgba(0, 0, 0, 0.1);
+    padding: 0;
+    line-height: 0;
+    width: 24px;
+    height: 24px;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-style: solid;
+
+}
+
+.close-btn {
+    fill: #2E2F42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-popup:hover>.close-btn,
+.close-popup:focus>.close-btn {
+    fill: #fff;
+}
+
+
+.close-popup:hover,
+.close-popup:focus {
+    background-color: #404bbf;
+}
+
+.text-popup {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 16px;
+
+}
+
+.field-wrapper {
+    margin-bottom: 8px;
+}
+
+.icon-inner {
+    position: relative;
+}
+
+.icon-wrapper {
+    fill: #2E2F42;
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-wrapper:hover,
+.icon-wrapper:focus {
+    fill: #4d5ae5;
+}
+
+.label-field {
+    display: block;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    margin-bottom: 4px;
+}
+
+.input-field {
+    width: 100%;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    ;
+    border-radius: 4px;
+    height: 40px;
+    padding-left: 38px;
+    padding-right: 10px;
+    outline: none;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-field:hover,
+.input-field:focus,
+.comment-field:hover,
+.comment-field:focus {
+    border: 1px solid #4d5ae5;
+}
+
+.input-field:hover+.icon-wrapper,
+.input-field:focus+.icon-wrapper {
+    fill: #4d5ae5;
+}
+
+.comment-field {
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    ;
+    border-radius: 4px;
+    width: 100%;
+    height: 120px;
+    padding: 8px 16px;
+    resize: none;
+    outline: none;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.comment-field::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+
+}
+
+.checkbox-wrapper {
+    padding-top: 8px;
+}
+
+.input-checkbox:checked+.text-terms .custom-checkbox {
+    background-color: #404bbf;
+    fill: #f4f4fd;
+}
+
+.check-icon {
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-checkbox:checked+label .custom-checkbox .check-icon {
+    opacity: 1;
+}
+
+.custom-checkbox {
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    padding: 4px 3px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 8px;
+    fill: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.text-terms {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.33333;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    border-radius: 4px;
+    width: 360px;
+    height: 16px;
+}
+
+.privacy-link {
+    text-decoration: underline;
+    color: #4d5ae5;
+    line-height: 1.33333;
+}
+
+.botton-field {
+    border-radius: 4px;
+    padding: 16px 32px;
+    width: 169px;
+    height: 56px;
+    background-color: #4d5ae5;
+    color: #fff;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    margin: 0 auto;
+    margin-top: 24px;
+    border: none;
+}
+
+.botton-field:hover,
+.botton-field:focus {
+    background-color: #404bbf;
 }
